Added index.html for Github Pages

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<meta http-equiv="refresh" content="0; url='https://netflix-db.streamlit.app/'" />
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="refresh" content="0; url='https://netflix-db.streamlit.app/'" />
+    <title>Redirecting…</title>
+</head>
+<body>
+    <p>If you are not redirected automatically, <a href="https://netflix-db.streamlit.app/">click here</a>.</p>
+</body>
+</html>
