Added index.html for Github Pages

--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <!-- OpenGraph (LinkedIn Preview) -->
+    <meta property="og:title" content="Netflix Analysis Dashboard" />
+    <meta property="og:description" content="Interactive Streamlit dashboard analyzing Netflix titles, genres, ratings and trends." />
+    <meta property="og:url" content="https://fr0styyXD.github.io/netflix-analysis/" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/fr0styyXD/netflix-analysis/main/visualizations/viz3_yearly_trend.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <!-- Actual redirect -->
     <meta http-equiv="refresh" content="0; url='https://netflix-db.streamlit.app/'" />
-    <title>Redirecting…</title>
+    
+    <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://netflix-db.streamlit.app/">click here</a>.</p>
+    <p>If you are not automatically redirected, <a href="https://netflix-db.streamlit.app/">click here</a>.</p>
 </body>
 </html>
